# gesture_recognition_client

./: CMakeLists.txt  README.md  package.xml
msg/: Gesture.msg
proto/: openpose.proto  openpose_rpc.proto
scripts/: gesture_recognition_client_node.py
