<?xml version="1.0"?>
<package>
  <name>gesture_recognition_client</name>
  <version>0.0.0</version>
  <description>The gesture_recognition_client package</description>
  <maintainer email="lshixin@ucsd.edu">Shixin Li</maintainer>
  <license>TODO</license>

  <build_depend>grpc</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>grpc</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>opencv3</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>

</package>
